--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,10 @@ spring.datasource.url=jdbc:h2:mem:default
 spring.jpa.show-sql=true
 
 # Disable security
-security.basic.enabled=false
-management.security.enabled=false
+#security.basic.enabled=false
+#management.security.enabled=false
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+logging.level.org.springframework=INFO
