--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:default
-spring.jpa.show-sql=true
-
 # Disable security
 #security.basic.enabled=false
 #management.security.enabled=false
@@ -10,3 +6,9 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 logging.level.org.springframework=INFO
+
+spring.datasource.url=jdbc:h2:mem:default
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+spring.jpa.defer-datasource-initialization=true
