--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,16 @@ spring.mvc.view.suffix=.jsp
 
 logging.level.org.springframework=INFO
 
-spring.datasource.url=jdbc:h2:mem:default
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
 
 spring.jpa.defer-datasource-initialization=true
+
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#todos-user@localhost:3306
